1.0.0/migrations/0019_deploy_maya_ui.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  labels:
  name: maya-ui
  namespace: default
spec:
  selector:
    matchLabels:
      app: maya-ui
  template:
    metadata:
      labels:
        app: maya-ui
    spec:
      containers:
      - image: index.docker.io/mayadataio/maya-ui:master-53d3efb3
        imagePullPolicy: Always
        name: maya-ui
        resources:
          requests:
            cpu: 100m
            memory: 512Mi
      imagePullSecrets:
      - name: mayadatasecret
---
#maya-ui svc
apiVersion: v1
kind: Service
metadata:
  labels:
    app: maya-ui
  name: maya-ui
  namespace: default
spec:
  ports:
  - name: maya-ui
    port: 80
    protocol: TCP
    targetPort: 80
  selector:
    app: maya-ui
