1.0.0/migrations/0024_deploy_chat_server.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  labels:
    app: chat-server
  name: chat-server
  namespace: default
spec:
  selector:
    matchLabels:
      app: chat-server
  template:
    metadata:
      labels:
        app: chat-server
    spec:
      containers:
      - env:
        - name: ADMIN_API_KEY
          valueFrom:
            secretKeyRef:
              key: ADMIN_API_KEY
              name: chat-server
        - name: SIGNING_SECRET
          valueFrom:
            secretKeyRef:
              key: SIGNING_SECRET
              name: chat-server
        - name: MAYA_SERVER_IP
          valueFrom:
            secretKeyRef:
              key: MAYA_SERVER_IP
              name: chat-server
        - name: SLASH_COMMAND
          valueFrom:
            secretKeyRef:
              key: SLASH_COMMAND
              name: chat-server
        image: mayadataio/maya-chatops:v1.11.10
        imagePullPolicy: Always
        name: chat-server
        resources:
          requests:
            cpu: 100m
            memory: 256Mi
      imagePullSecrets:
      - name: mayadatasecret
---
#chat server svc 
apiVersion: v1
kind: Service
metadata:
  labels:
    app: chat-server
  name: chat-server
  namespace: default
spec:
  ports:
  - name: maya-chatops
    port: 8080
    protocol: TCP
    targetPort: 8080
  selector:
    app: chat-server
