1.0.0/migrations/0027_deploy_kibana.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  labels:
    k8s-app: kibana-logging
  name: kibana-logging
  namespace: default
spec:
  progressDeadlineSeconds: 600
  replicas: 1
  revisionHistoryLimit: 10
  selector:
    matchLabels:
      k8s-app: kibana-logging
  template:
    metadata:
      creationTimestamp: null
      labels:
        k8s-app: kibana-logging
    spec:
      containers:
      - env:
        - name: SERVER_BASEPATH
          value: /kibana
        image: mayadataio/kibana:f960e137
        imagePullPolicy: Always
        name: kibana-logging
        ports:
        - containerPort: 5601
          name: ui
          protocol: TCP
        resources:
          limits:
            cpu: "1"
          requests:
            cpu: 100m
      imagePullSecrets:
      - name: mayadatasecret
---
#kibana svc
apiVersion: v1
kind: Service
metadata:
  labels:
    k8s-app: kibana-logging
  name: kibana-logging
  namespace: default
spec:
  ports:
  - port: 5601
    protocol: TCP
    targetPort: 5601
  selector:
    k8s-app: kibana-logging
  type: ClusterIP
