1.0.0/migrations/0030_deploy_configs_db.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: configs-db
  namespace: default
spec:
  replicas: 1
  template:
    metadata:
      labels:
        name: configs-db
      annotations:
        prometheus.io.scrape: "false"
    spec:
      containers:
      - name: configs-db
        image: postgres:9.6
        imagePullPolicy: IfNotPresent
        env:
          - name: POSTGRES_DB
            value: configs
        ports:
        - containerPort: 5432
---
apiVersion: v1
kind: Service
metadata:
  name: configs-db
  namespace: default
spec:
  ports:
    - port: 5432
  selector:
    name: configs-db
