1.0.0/migrations/0033_deploy_memcached.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: memcached
spec:
  replicas: 1
  template:
    metadata:
      labels:
        name: memcached
      annotations:
        prometheus.io.scrape: "false"
    spec:
      containers:
      - name: memcached
        image: memcached:1.4.25
        imagePullPolicy: IfNotPresent
        args:
        - -m 64 # Maximum memory to use, in megabytes. 64MB is default.
        - -p 11211 # Default port, but being explicit is nice.
        ports:
        - name: clients
          containerPort: 11211
---
apiVersion: v1
kind: Service
metadata:
  name: memcached
spec:
  # The memcache client uses DNS to get a list of memcached servers and then
  # uses a consistent hash of the key to determine which server to pick.
  clusterIP: None
  ports:
    - name: memcached
      port: 11211
    - name: prom
      port: 9150
  selector:
    name: memcached
