1.0.0/migrations/0041_deploy_querier.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: querier
spec:
  replicas: 3
  template:
    metadata:
      labels:
        name: querier
    spec:
      containers:
      - name: querier
        image: quay.io/cortexproject/querier:master-590e72c6
        imagePullPolicy: IfNotPresent
        args:
        - -server.http-listen-port=80
        - -consul.hostname=consul.variablename.svc.cluster.local:8500
        - -dynamodb.original-table-name=cortex
        - -chunk.storage-client=cassandra
        - -cassandra.addresses=cassandra.variablename.svc.cluster.local
        - -cassandra.keyspace=mayacortex
        - -dynamodb.periodic-table.prefix=cortex_weekly_
        - -dynamodb.periodic-table.from=2017-01-06
        - -dynamodb.daily-buckets-from=2017-01-10
        - -dynamodb.base64-buckets-from=2017-01-17
        - -dynamodb.v4-schema-from=2017-02-05
        - -dynamodb.v5-schema-from=2017-02-22
        - -dynamodb.v6-schema-from=2017-03-19
        - -dynamodb.chunk-table.from=2017-04-17
        - -memcached.hostname=memcached.variablename.svc.cluster.local
        - -memcached.timeout=100ms
        - -memcached.service=memcached
        - -distributor.replication-factor=1
        ports:
        - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: querier
spec:
  ports:
    - port: 80
  selector:
    name: querier
