1.0.0/migrations/0042_deploy_distributor.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: distributor
spec:
  replicas: 1
  template:
    metadata:
      labels:
        name: distributor
    spec:
      containers:
      - name: distributor
        image: quay.io/cortexproject/distributor:master-590e72c6
        imagePullPolicy: IfNotPresent
        args:
        - -log.level=debug
        - -server.http-listen-port=80
        - -consul.hostname=consul.default.svc.cluster.local:8500
        - -distributor.replication-factor=1
        ports:
        - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: distributor
spec:
  ports:
    - port: 80
  selector:
    name: distributor
