1.0.0/migrations/0043_deploy_ruler.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: ruler
spec:
  replicas: 1
  template:
    metadata:
      labels:
        name: ruler
    spec:
      containers:
      - name: ruler
        image: quay.io/cortexproject/ruler:master-590e72c6
        imagePullPolicy: IfNotPresent
        args:
        - -log.level=debug
        - -server.http-listen-port=80
        - -ruler.configs.url=http://configs.default.svc.cluster.local:80
        - -ruler.alertmanager-url=http://alertmanager.default.svc.cluster.local/api/prom/alertmanager/
        - -consul.hostname=consul.default.svc.cluster.local:8500
        - -dynamodb.original-table-name=cortex
        - -chunk.storage-client=cassandra
        - -cassandra.addresses=cassandra.default.svc.cluster.local
        - -cassandra.keyspace=mayacortex
        - -dynamodb.periodic-table.prefix=cortex_weekly_
        - -dynamodb.periodic-table.from=2017-01-06
        - -dynamodb.daily-buckets-from=2017-01-10
        - -dynamodb.base64-buckets-from=2017-01-17
        - -dynamodb.v4-schema-from=2017-02-05
        - -dynamodb.v5-schema-from=2017-02-22
        - -dynamodb.v6-schema-from=2017-03-19
        - -dynamodb.chunk-table.from=2017-04-17
        - -memcached.hostname=memcached.default.svc.cluster.local
        - -memcached.timeout=100ms
        - -memcached.service=memcached
        - -distributor.replication-factor=1
        - -ruler.num-workers=64
        ports:
        - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: ruler
spec:
  ports:
    - port: 80
  selector:
    name: ruler
